# ExpenseTracker

./: .gitignore  AndroidManifest.xml  DriveServiceHelper.java  MainActivity.java  Michael_Balian.rtf  build.gradle  inClassFile
Mike/: inputs.rtf
app/src/main/cpp/: CMakeLists.txt  OpenXLSX.lib  components.h  components.hpp  expensetracker.cpp  native-lib.cpp  spreadsheet_backend.cpp  test.cpp  user.json
app/src/main/cpp/.history/headers/: components_20220423230106.hpp  components_20220429174221.hpp  components_20220429174224.hpp  components_20220429174225.hpp  components_20220429174226.hpp  components_20220429174227.hpp  components_20220429174255.hpp  components_20220429174256.hpp  components_20220429174257.hpp  components_20220429174258.hpp  components_20220429174259.hpp  components_20220429174300.hpp  components_20220429174301.hpp  components_20220429174302.hpp  components_20220429174342.hpp  components_20220429174347.hpp  components_20220429174352.hpp  components_20220429174354.hpp  components_20220429174355.hpp  components_20220429174357.hpp  components_20220429174359.hpp  components_20220429174403.hpp  components_20220429174404.hpp  components_20220429174406.hpp  components_20220429174408.hpp  components_20220429174409.hpp  components_20220429174411.hpp  components_20220429174427.hpp  components_20220429175710.hpp
app/src/main/cpp/OpenXLSX/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  expensetracker.sln  expensetracker.vcxproj  expensetracker.vcxproj.filters
app/src/main/cpp/headers/: Components_Test_Code.cpp  WriteReadHandle.java  commands.txt  components.hpp  headers_jni_test_file.cpp  headers_jni_test_file.java  headers_test_file.cpp  new_componenets_test.cpp  test_trans.json  transactionsJSON.json  user.json
app/src/main/cpp/headers/.history/: .gitignore  WriteReadHandle_20220419184256.java  WriteReadHandle_20220419184329.java  WriteReadHandle_20220419184330.java  WriteReadHandle_20220419184346.java  WriteReadHandle_20220419184348.java  WriteReadHandle_20220419184358.java  WriteReadHandle_20220419184404.java  (+2141 more)
app/src/main/cpp/sidescrap/: headers_jni_test_file.cpp  headers_jni_test_file.h  headers_jni_test_file.java  jni.h  old_components.hpp  transactionsJSON.json
(+1150 files in other folders)
